frame/support/test/tests/pallet_ui/step_016.stderr
error: Missing `#[pallet::call]
 --> $DIR/step_016.rs:2:1
  |
2 | mod pallet {
  | ^^^
